--- a/leave-management-backend/.env.example
+++ b/leave-management-backend/.env.example
@@ -1,4 +1,4 @@
-DB_URL=jdbc:postgresql://localhost:5432/leave_management
-DB_USERNAME=your_username
-DB_PASSWORD=your_password
-SERVER_PORT=8080
+DB_URL=jdbc:postgresql://ep-dry-thunder-a4g9buc1-pooler.us-east-1.aws.neon.tech:5432/Leavemangdb?sslmode=require
+DB_USERNAME=Leavemangdb_owner
+DB_PASSWORD=npg_0ZYBTd7pHEPh
+SERVER_PORT=8083
