--- a/leave-management-backend/src/main/resources/application.properties
+++ b/leave-management-backend/src/main/resources/application.properties
@@ -37,3 +37,17 @@ app.oauth2.redirectUri=${app.frontend.url}/dashboard
 # JWT Configuration
 jwt.secret=${JWT_SECRET}
 jwt.expiration=${JWT_EXPIRATION}
+
+# Gmail SMTP settings
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${mail_username}
+spring.mail.password=${mail_password}
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
