--- a/leave-management-backend/src/main/resources/application.properties
+++ b/leave-management-backend/src/main/resources/application.properties
@@ -40,7 +40,7 @@ jwt.expiration=${JWT_EXPIRATION}
 
 # Gmail SMTP settings
 spring.mail.host=smtp.gmail.com
-spring.mail.port=587
+spring.mail.port=${mail_port}
 spring.mail.username=${mail_username}
 spring.mail.password=${mail_password}
 spring.mail.protocol=smtp
