fix(Bn):fixing run build for application

--- a/leave-management-backend/src/main/resources/application.properties
+++ b/leave-management-backend/src/main/resources/application.properties
@@ -38,16 +38,8 @@ app.oauth2.redirectUri=${app.frontend.url}/dashboard
 jwt.secret=${JWT_SECRET}
 jwt.expiration=${JWT_EXPIRATION}
 
-# Gmail SMTP settings
-spring.mail.host=smtp.gmail.com
-spring.mail.port=${mail_port}
-spring.mail.username=${mail_username}
-spring.mail.password=${mail_password}
-spring.mail.protocol=smtp
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
-spring.mail.properties.mail.smtp.connectiontimeout=5000
-spring.mail.properties.mail.smtp.timeout=5000
-spring.mail.properties.mail.smtp.writetimeout=5000
+# Gmail SMTP settings (optional - mail is disabled by default)
+# To enable mail, set mail_username and mail_password environment variables
+# Mail auto-configuration is disabled - will be enabled conditionally via MailConfig
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.mail.MailSenderAutoConfiguration
 
