--- a/leave-management-backend/.gitignore
+++ b/leave-management-backend/.gitignore
@@ -1,36 +1,25 @@
 HELP.md
+
+# Maven
 target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+**/target/
+*.class
 
 ### Environment Variables ###
 .env
 
-### STS ###
-.apt_generated
+### IDE ###
+.idea
+*.iws
+*.iml
+*.ipr
+.vscode
 .classpath
-.factorypath
 .project
 .settings
 .springBeans
 .sts4-cache
 
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-### VS Code ###
-.vscode/
+### Build tools ###
+/build/
+/nbproject/
