--- a/leave-management-backend/src/main/resources/application.properties
+++ b/leave-management-backend/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.security.oauth2.client.registration.azure-dev.client-id=${client-id}
 spring.security.oauth2.client.registration.azure-dev.client-secret=${client-secret}
 spring.security.oauth2.client.registration.azure-dev.scope=openid,email,profile
 spring.security.oauth2.client.registration.azure-dev.redirect-uri=http://localhost:8083/login/oauth2/code/azure-dev
-#spring.security.oauth2.client.registration.azure-dev.redirect-uri=https://leave-management-system-6cab.onrender.com/login/oauth2/code/azure-dev
+spring.security.oauth2.client.registration.azure-dev.redirect-uri=https://leave-management-system-6cab.onrender.com/login/oauth2/code/azure-dev
 spring.security.oauth2.client.provider.microsoft.authorization-uri=https://login.microsoftonline.com/common/oauth2/v2.0/authorize
 spring.security.oauth2.client.provider.microsoft.token-uri=https://login.microsoftonline.com/common/oauth2/v2.0/token
 spring.security.oauth2.client.provider.microsoft.jwk-set-uri=https://login.microsoftonline.com/common/discovery/v2.0/keys
@@ -31,7 +31,7 @@ spring.security.oauth2.client.provider.microsoft.user-info-uri=https://graph.mic
 
 # Frontend URLs for CORS
 app.frontend.url=http://localhost:5173
-#app.frontend.url=https://leave-manage.netlify.app
+app.frontend.url=https://leave-manage.netlify.app
 app.oauth2.redirectUri=${app.frontend.url}/dashboard
 
 # JWT Configuration
